--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/d40fc26e-4b55-4da6-ba8d-81a605ff070e/vending_icon.png?v=1708081944730" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vending-redux</title>
+    <title>My Little Vending Machine</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
